# Simple2

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8a1f2414ffb3_user_appointment_and_document.py
app/db/: base.py
app/dependecies/: jwt_bearer.py  jwt_handler.py  role_checker.py
app/model/: __init__.py  appoinment_model.py  chat_model.py  document_model.py  patient_model.py  user_model.py
app/repo/: appointment_repo.py  chat_repo.py  user_repo.py
app/router/: appointment_router.py  auth_router.py  clinician_router.py  frontdesk_router.py  user_router.py
app/schema/: appointment_schema.py  chat_schema.py  user_schema.py
app/service/: appointemnet_service.py  assistant_service.py  auth_service.py  chat_service.py  email_service.py  user_service.py
app/utils/: config.py  hashing.py  logger.py
