[project]
name = "threshold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "boto3>=1.43.36",
    "botocore>=1.43.36",
    "certifi>=2026.6.17",
    "fastapi>=0.138.0",
    "fastapi-mail>=1.6.5",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
